# duration-flex

./: .gitignore  .taplo.toml  AGENTS.md  CRATE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
app/: Cargo.toml
lib/: Cargo.toml
scripts/: setup-hooks  setup-target
scripts/hooks/: commit-msg  pre-commit
scripts/hooks/impl/: commit-msg  pre-commit
src/: lib.rs
