[package]
authors = [ "Vinicius Gobbo Antunes de Oliveira <vgobbo@gmail.com>" ]
description = "Specify durations in an easier to easy format, like 1h20m."
edition = "2021"
homepage = "https://github.com/vgobbo/duration-flex?tab=readme-ov-file#duration-flex"
keywords = [ "chrono", "time" ]
license = "MIT OR Apache-2.0"
name = "duration-flex"
readme = "CRATE.md"
repository = "https://github.com/vgobbo/duration-flex?tab=readme-ov-file"
version = "0.4.0"

[dependencies]
chrono = { version = "0.4" }
clap = { version = "4.6", features = [ "string" ], optional = true }
once_cell = { version = "1.21" }
regex = { version = "1.12" }
serde = { version = "1.0", features = [ "derive" ], optional = true }
validator = { version = "0.20", optional = true }

[dev-dependencies]
clap = { version = "4.6", features = [ "derive", "string" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_test = { version = "1.0" }
validator = { version = "0.20", features = [ "derive" ] }

[features]
default = [  ]
full = [ "clap", "serde", "validator" ]
validator = [ "dep:validator", "serde" ]
